[package]
name = "bye-branch"
version = "0.1.12"
edition = "2021"
authors = ["Yuki Ishii"]
license = "MIT"
description = "A tool to delete brachnes with friendly CLI"
readme = "README.md"
homepage = "https://github.com/yuki0418/bye-branch"
repository = "https://github.com/yuki0418/bye-branch"
keywords = ["cli", "delete", "branch", "git"]
categories = ["command-line-utilities"]


[dependencies]
requestty = "0.5.0"